BST immediate inorder successor

--- a/Solutions/Solutions.csproj
+++ b/Solutions/Solutions.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BST_Larger_than_K.cs" />
     <Compile Include="HelloWorld.cs" />
     <Compile Include="NumbersSumToValueQuora.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
